bk_ida/gccida/c2/refers_to_regno_p
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1753:6: error: use of undeclared identifier 'v14'
rtx *v14; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1759:6: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx *v20; // rax 
     ^~~
     v10
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1749:18: note: 'v10' declared here
 struct rtx_def *v10; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1759:5: error: invalid operands to binary expression ('struct rtx_def *' and 'struct rtx_def *')
rtx *v20; // rax 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1818:14: error: expected expression
v14 = ( rtx *)&v5[1]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1818:1: error: use of undeclared identifier 'v14'
v14 = ( rtx *)&v5[1]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1819:6: error: use of undeclared identifier 'v14'
if ( v14 == loc ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1822:7: error: use of undeclared identifier 'v14'; did you mean 'v10'?
v5 = *v14; 
      ^~~
      v10
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1749:18: note: 'v10' declared here
 struct rtx_def *v10; // rdx 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1822:4: error: assigning to 'rtx' (aka 'struct rtx_def *') from incompatible type 'struct rtx_def'; remove *
v5 = *v14; 
   ^ ~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1836:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1836:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1838:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)BYTE2( v6)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1847:29: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
result = ( ( unsigned int)( mode_class_0[v32] - 5) < 2) + 1; 
                            ^~~~~~~~~~~~
                            mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1889:29: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
result = ( ( unsigned int)( mode_class_0[( unsigned __int8)v28] - 5) < 2) + 1; 
                            ^~~~~~~~~~~~
                            mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1924:14: error: expected expression
v20 = ( rtx *)&v5->fld[v17]; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1924:1: error: use of undeclared identifier 'v20'
v20 = ( rtx *)&v5->fld[v17]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1925:6: error: use of undeclared identifier 'v20'
if ( v20 != loc ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1929:14: error: expected expression
v14 = ( rtx *)v5->fld; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1929:1: error: use of undeclared identifier 'v14'
v14 = ( rtx *)v5->fld; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1932:44: error: use of undeclared identifier 'v20'; did you mean 'v22'?
v21 = refers_to_regno_p( regno, endregno, *v20, loc); 
                                           ^~~
                                           v22
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/rtlanal.c:1761:15: note: 'v22' declared here
unsigned int *v22; // rax 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/refers_to_regno_p/src/obj/rtlanal.o] Error 1
